--- a/tencent_kf_______002.html
+++ b/tencent_kf_______002.html
@@ -25,8 +25,8 @@
     <div id="base" class="">
 
       <!-- Unnamed (Image) -->
-      <div id="u1" class="ax_default image">
-        <img id="u1_img" class="img " src="images/tencent_kf_______002/u1.png"/>
+      <div id="u0" class="ax_default image">
+        <img id="u0_img" class="img " src="images/tencent_kf_______002/regen/u0.jpg"/>
       </div>
     </div>
   </body>
