--- a/tencent_kf_______002.html
+++ b/tencent_kf_______002.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (Image) -->
       <div id="u0" class="ax_default image">
-        <img id="u0_img" class="img " src="images/tencent_kf_______002/regen/u0.jpg"/>
+        <img id="u0_img" class="img " src="images/tencent_kf_______002/regen/u0.png"/>
       </div>
     </div>
   </body>
